fix images 'parcourir mon compte'

--- a/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
@@ -36,7 +36,8 @@
   thirdStepDescription="Bénéficiez d’une interface sécurisée et fiable pour le traitement de vos informations bancaires."
   [firstJumpTo]="5" [secondJumpTo]="15"></explaination-video>
 
-<description-my-account></description-my-account>
+<description-my-account
+  imageSrc="assets/img/myjss-services/announcement/parcourir_mon_compte_annonce.webp"></description-my-account>
 
 <section *ngIf="carouselAnnouncementPosts && carouselAnnouncementPosts.length>0" class="background-opacity">
   <div class="container">
