--- a/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
@@ -35,7 +35,8 @@
   thirdStepDescription="Recevez vos documents selon les modalités que vous aurez précisées." [firstJumpTo]="5"
   [secondJumpTo]="15"></explaination-video>
 
-<description-my-account></description-my-account>
+<description-my-account
+  imageSrc="assets/img/myjss-services/apostilles/parcourir_mon_compte_apostille.webp"></description-my-account>
 
 <section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
   <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
