--- a/client-myjss/src/app/modules/my-services/components/description-my-account/description-my-account.component.html
+++ b/client-myjss/src/app/modules/my-services/components/description-my-account/description-my-account.component.html
@@ -3,7 +3,7 @@
   <div class="row pb-md-4 pb-xl-5 order-1 order-md-1">
     <div class="col-md-5 mb-2 mb-md-0">
       <div class="card border-0 h-100 bg-size-cover bg-position-center"
-        style="background-image: url(assets/img/myjss-services/myjss_phone.png);">
+        [ngStyle]="{'background-image': 'url('+imageSrc +')'}">
         <div class="d-none d-sm-block d-md-none" style="height: 450px;"></div>
         <div class="d-sm-none" style="height: 350px;"></div>
       </div>
