--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -34,7 +34,8 @@
   secondStepDescription="Dès validation nos équipes se mobilisent pour obtenir vos pièces dans les meilleurs délais."
   [firstJumpTo]="5" [secondJumpTo]="15"></explaination-video>
 
-<description-my-account></description-my-account>
+<description-my-account
+  imageSrc="assets/img/myjss-services/documents/parcourir_mon_compte_document.webp"></description-my-account>
 
 <section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
   <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
