--- a/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
@@ -35,7 +35,7 @@
   thirdStepTitle="Recevez votre contrat par email"
   thirdStepDescription="Dès la signature de votre contrat, il vous est envoyé par mail et votre société est domiciliée."></explaination-video>
 
-<description-my-account></description-my-account>
+<description-my-account imageSrc="assets/img/parcourir_mon_compte_accueil.webp"></description-my-account>
 
 <section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
   <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
