--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -36,7 +36,8 @@
   thirdStepTitle="Remplissez le bon de commande et téléversez les pièces justificatives"
   thirdStepDescription="Naviguez sur une interface sécurisée et optimisée pour un traitement rapide et fiable de vos informations."></explaination-video>
 
-<description-my-account></description-my-account>
+<description-my-account
+  imageSrc="assets/img/myjss-services/formalites/parcourir_mon_compte_formalite.webp"></description-my-account>
 
 <section *ngIf="carouselFormalityPosts && carouselFormalityPosts.length>0" class="background-opacity">
   <div class="container">
