--- a/client-jss/src/app/main/components/announcement/announcement.component.html
+++ b/client-jss/src/app/main/components/announcement/announcement.component.html
@@ -40,7 +40,7 @@
                         </li>
                       </ul>
                       <div class="col-lg-12 mt-2">
-                        <p *ngIf="announcement && announcement.noticeHeader"><span
+                        <p *ngIf="announcement && announcement.noticeHeader && !announcement.isLegacy"><span
                             [innerHTML]="announcement.noticeHeader| trustHtml"></span></p>
                         <p *ngIf="announcement && announcement.notice"><span
                             [innerHTML]="announcement.notice| trustHtml"></span></p>
@@ -53,7 +53,7 @@
           </section>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" *ngIf="announcement && !announcement.isLegacy">
           <div class="col-12 col-md-6 text-center">
             <button class="btn btn-lg download-btn w-100 w-md-auto rounded-1" type="submit"
               (click)="downloadPublicationReceipt()">
