--- a/client-jss/src/app/main/components/main/main.component.css
+++ b/client-jss/src/app/main/components/main/main.component.css
@@ -1,29 +1,34 @@
 .gray-400 {
-    color: var(--bs-gray-400);
+  color: var(--bs-gray-400);
 }
 
 .bg-newsletter {
-    background-color: #ECF5FF;
+  background-color: #ECF5FF;
 }
 
 .counter-post-item {
-    border-left: 1px solid var(--bs-gray-700);
+  border-left: 1px solid var(--bs-gray-700);
 }
 
 .digits {
-    color: var(--ar-primary);
-    font-weight: 600;
+  color: var(--ar-primary);
+  font-weight: 600;
 }
 
 .title-most-seen {
-    color: var(--ar-primary);
+  color: var(--ar-primary);
 }
 
 .fixed-size-img-posts .card-img img {
-    height: 320px;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-    display: block;
-    border-radius: inherit;
+  height: 320px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+  border-radius: inherit;
+}
+
+.custom-bandeau-container {
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
