--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -1,9 +1,11 @@
 <div class="container my-4 position-relative text-center d-none d-md-block">
-  <img src="/assets/images/homepage/bandeau_hp_jss.svg" class="img-fluid w-100" alt="Top image" />
-  <a class="btn btn-yellow position-absolute start-55 top-50 translate-middle pointer"
-    [href]="frontendMyJssUrl+MY_JSS_HOME_ROUTE" target="_blank">
-    Essayer dès maintenant
-  </a>
+  <div class="custom-bandeau-container">
+    <img src="/assets/images/homepage/bandeau_hp_jss.svg" class="img-fluid" alt="Top image" />
+    <a class="btn btn-yellow position-absolute start-55 top-50 translate-middle pointer"
+      [href]="frontendMyJssUrl+MY_JSS_HOME_ROUTE" target="_blank">
+      Essayer dès maintenant
+    </a>
+  </div>
 </div>
 
 <div class="container">
