fix remove car-title-truncate css property on every 'Les plus vus'

--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -289,7 +289,7 @@
                   <div class="col-auto digits pe-2">
                     {{index+1}}.
                   </div>
-                  <div class="col counter-post-item card-title-truncate ps-2">
+                  <div class="col counter-post-item  ps-2">
                     <a [routerLink]='"/post/" + post.slug' class="title-most-seen">{{post.titleText}}</a>
                   </div>
                 </div>
