--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -172,7 +172,7 @@
                 <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]"
                   (click)="openTagSearch(post.postTags[0].slug, $event)">{{post.postTags[0].name}}</a>
               </div>
-              <h3 class="h4 card-title card-title-truncate">
+              <h3 class="h4 card-title">
                 <a [routerLink]="'/post/'+post.slug">{{post.titleText}}</a>
               </h3>
               <p class="card-text card-text-truncate">{{post.excerptText}}</p>
