various bugs corrections

--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -193,7 +193,8 @@
     </generic-swiper>
   </div>
 </section>
-<generic-testimonial></generic-testimonial>
+<!-- TODO : uncomment when done -->
+<!-- <generic-testimonial></generic-testimonial> -->
 <div class="py-5 my-md-3 my-lg-4 my-xxl-5">
   <newsletter></newsletter>
 </div>
