--- a/client-myjss/src/app/modules/general/components/newsletter/newsletter.component.html
+++ b/client-myjss/src/app/modules/general/components/newsletter/newsletter.component.html
@@ -2,7 +2,7 @@
 <section class="container">
   <div class="container newsletter my-2 my-md-3 my-xl-4 pb-2 rounded-5 overflow-hidden p-md-5 p-4">
     <div class="row justify-content-center gy-md-5 gy-4 gx-xl-5 p-4">
-      <h1 class="h2 text-center">Pour ne rien rater de nos prochains articles,
+      <h1 class="h2 text-center text-secondary">Pour ne rien rater de nos prochains articles,
         inscrivez-vous à notre newsletter</h1>
     </div>
     <div class="row justify-content-center mb-4 mb-md-2 gy-md-5 gy-4 gx-xl-5">
