fix CGV content and link to cgu and cgv open new window

--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
@@ -175,7 +175,7 @@
             required>
           <label class="form-check-label" for="save-info2">En cochant la case, je reconnais avoir pris connaissance et
             accepter les Conditions Générales d’Utilisation du site accessibles et téléchargeables <a class="cgu-link"
-              routerLink="/privacy-policy" (click)="modal.dismiss()">ici</a>.
+              href="/privacy-policy" target="_blank" rel="noopener noreferrer" (click)="modal.dismiss()">ici</a>.
           </label>
         </div>
       </div>
