--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -716,7 +716,7 @@
           required>
         <label class="form-check-label" for="save-info2">En cochant cette case, je reconnais avoir pris connaissance et
           accepter les Conditions Générales de Vente (CGV), disponibles <a class="cgu-link"
-            href="/assets/documents/CGV_JSS.pdf">ici</a>.
+            href="/assets/documents/CGV_JSS.pdf" target="_blank" rel="noopener noreferrer">ici</a>.
         </label>
       </div>
       <div *ngIf="!currentUser" class="form-check mb-4 pe-2">
@@ -724,7 +724,7 @@
           name="acceptUseTerms" required>
         <label class="form-check-label" for="save-info3">En cochant cette case, je reconnais avoir pris connaissance et
           accepter les Conditions Générales d’Utilisation (CGU) du site, disponibles <a class="cgu-link"
-            href="/assets/documents/CGU_JSS.pdf">ici</a>.
+            href="/assets/documents/CGU_JSS.pdf" target="_blank" rel="noopener noreferrer">ici</a>.
         </label>
       </div>
       <div class="row gx-1 gy-3 justify-content-between">
