--- a/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.html
@@ -1,7 +1,7 @@
 <section class="container overflow-hidden pb-5">
   <div class="card-info">
     <div class="row">
-      <div class="col-1">
+      <div class="d-none d-lg-block col-lg-1">
         <swiper-container #datesSwiper class="datesSwiper" direction="vertical" space-between="10" mousewheel="true"
           speed="500" slides-per-view="3">
           <swiper-slide>
@@ -46,15 +46,15 @@
         </swiper-container>
       </div>
 
-      <div class="col-11">
+      <div class="col-lg-11 col-12">
         <swiper-container #mainSwiper direction="vertical" thumbs-swiper=".datesSwiper" space-between="300"
           mousewheel="true">
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/1898.png" alt="Image">
               </div>
-              <div class="col-lg-4 order-md-2 ps-3">
+              <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">1898</h1>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
@@ -65,25 +65,25 @@
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="col-lg-4 order-md-2 pe-3">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">1900</h1>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
                   <p class="fs-2 mb-4 mb-xl-5">Première habilitation dans le département de la Seine</p>
                 </div>
               </div>
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/1900.jpg" alt="Image">
               </div>
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/1985.jpg" alt="Image">
               </div>
-              <div class="col-lg-4 order-md-2 ps-3">
+              <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">1985</h1>
                   <small class="mb-xl-4">FORMALITÉS</small>
@@ -93,25 +93,25 @@
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="col-lg-4 order-md-2 pe-3">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2002</h1>
                   <small class="mb-xl-4">SITE WEB</small>
                   <p class="fs-2 mb-4 mb-xl-5">Lancement du site internet jss.fr</p>
                 </div>
               </div>
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2002.jpg" alt="Image">
               </div>
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2003.jpg" alt="Image">
               </div>
-              <div class="col-lg-4 order-md-2 ps-3">
+              <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2003</h1>
                   <small class="mb-xl-4">FORMATIONS</small>
@@ -121,8 +121,8 @@
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="col-lg-4 order-md-2 pe-3">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2004</h1>
                   <small class="mb-xl-4"></small>
@@ -130,17 +130,17 @@
                     juriste et de l’entreprise</p>
                 </div>
               </div>
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2004.jpg" alt="Image">
               </div>
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2014.jpg" alt="Image">
               </div>
-              <div class="col-lg-4 order-md-2 ps-3">
+              <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2014</h1>
                   <small class="mb-xl-4">TRAITEMENT DES FORMALITÉS</small>
@@ -150,25 +150,25 @@
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="col-lg-4 order-md-2 pe-3">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2015</h1>
                   <small class="mb-xl-4">CROISSANCE EXTERNE</small>
                   <p class="fs-2 mb-4 mb-xl-5">Rachat du Journal “les Annonces de la Seine"</p>
                 </div>
               </div>
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2015.jpg" alt="Image">
               </div>
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2016.png" alt="Image">
               </div>
-              <div class="col-lg-4 order-md-2 ps-3">
+              <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2016</h1>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
@@ -178,25 +178,25 @@
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="col-lg-4 order-md-2 pe-3">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2019</h1>
                   <small class="mb-xl-4">DOMICILIATION</small>
                   <p class="fs-2 mb-4 mb-xl-5">Création du Service Domiciliation</p>
                 </div>
               </div>
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2019.jpg" alt="Image">
               </div>
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2020.jpg" alt="Image">
               </div>
-              <div class="col-lg-4 order-md-2 ps-3">
+              <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2020</h1>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
@@ -206,25 +206,25 @@
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="col-lg-4 order-md-2 pe-3">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2022</h1>
                   <small class="mb-xl-4">JOURNAL SPÉCIAL DES SOCIÉTÉS</small>
                   <p class="fs-2 mb-4 mb-xl-5">Le journal devient hebdomadaire</p>
                 </div>
               </div>
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2022.jpg" alt="Image">
               </div>
             </div>
           </swiper-slide>
           <swiper-slide auto-height="true">
-            <div class="row flex-grow-1 ms-2 g-0">
-              <div class="card rounded-3 col-8 order-md-2 d-none d-md-block p-0 overflow-hidden">
+            <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
+              <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
                 <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2023.png" alt="Image">
               </div>
-              <div class="col-lg-4 order-md-2 ps-3">
+              <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
                   <h1 class="mb-xl-4">2023</h1>
                   <small class="mb-xl-4">JOURNAL SPÉCIAL DES SOCIÉTÉS</small>
